docs: Update legal documents to clarify language version precedence
- Added a statement regarding the precedence of the Portuguese version in case of divergence between language versions across various legal and policy documents.
- Enhanced the expert agreement, payment policies, privacy policy, and terms of service to ensure consistency in language and compliance with regulations.

--- a/src/content/expert-agreement/en.mdx
+++ b/src/content/expert-agreement/en.mdx
@@ -90,6 +90,10 @@ We do not provide medical advice or supervision, provide malpractice insurance, 
 
 ---
 
+In case of divergence between language versions, the Portuguese version shall prevail.
+
+---
+
 By offering services on Eleva.care, you confirm you are licensed, insured, and agree to these terms as an independent professional.
 
 Operator: BÚZIOS E TARTARUGAS – LDA (Eleva.care), NIPC/VAT 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Support `support@eleva.care`, Legal `legal@eleva.care`, DPO `dpo@eleva.care`.
