--- a/src/content/expert-agreement/es.mdx
+++ b/src/content/expert-agreement/es.mdx
@@ -1,11 +1,13 @@
 export const metadata = {
-  "title": "Acuerdo de Expertos | Eleva Care",
-  "description": "Revise el acuerdo de expertos de Eleva Care que describe los términos y condiciones para expertos independientes que utilizan nuestra plataforma.",
-  "og": {
-    "title": "Acuerdo de Expertos | Eleva Care",
-    "description": "Revise el acuerdo de expertos de Eleva Care que describe los términos y condiciones para expertos independientes que utilizan nuestra plataforma.",
-    "siteName": "Eleva Care"
-  }
+  title: 'Acuerdo de Expertos | Eleva Care',
+  description:
+    'Revise el acuerdo de expertos de Eleva Care que describe los términos y condiciones para expertos independientes que utilizan nuestra plataforma.',
+  og: {
+    title: 'Acuerdo de Expertos | Eleva Care',
+    description:
+      'Revise el acuerdo de expertos de Eleva Care que describe los términos y condiciones para expertos independientes que utilizan nuestra plataforma.',
+    siteName: 'Eleva Care',
+  },
 };
 
 # Acuerdo de Servicios para Expertos
@@ -14,17 +16,20 @@ _Fecha de vigencia: 16 de abril de 2025_
 
 Bienvenido/a a Eleva.care. Este acuerdo explica, en lenguaje claro, cómo colaboramos cuando ofrece servicios en nuestra plataforma.
 
+Eleva.care opera una plataforma digital de salud que permite la prestación de servicios de salud remotos por profesionales independientes y licenciados, funcionando en el marco de las actividades de salud digital y telemedicina definidas en la legislación portuguesa aplicable, sin prestar ella misma atención clínica.
+
 ## 1) Su condición (profesional independiente)
 
-- Usted es un profesional de salud independiente con licencia—no es empleado/a, socio/a ni agente nuestro
-- Gestiona su propia práctica: agenda, honorarios, políticas, impuestos, seguros y cumplimiento normativo dependen de usted
-- No supervisamos sus decisiones clínicas ni prestamos servicios médicos
+- Usted es un profesional de salud independiente con licencia—no es empleado/a, socio/a ni agente nuestro.
+- Gestiona su propia práctica profesional y sigue siendo responsable de sus decisiones clínicas, licencias, seguros, impuestos y cumplimiento de obligaciones clínicas y éticas. Eleva.care es responsable de la conformidad organizativa, técnica y administrativa de la plataforma digital de salud que opera.
+- Eleva.care no interfiere ni influye en el juicio clínico, diagnóstico o decisiones de tratamiento de los especialistas.
 
 ## 2) Requisitos profesionales
 
-- Mantenga su(s) licencia(s) válida(s) y en buen estado; infórmenos de cambios
-- Mantenga seguro de responsabilidad profesional (provea comprobante cuando se solicite)
-- Brinde atención conforme a la ley, ética, consentimiento informado y estándares clínicos; registre y proteja la privacidad
+- Mantenga su(s) licencia(s) válida(s) y en buen estado; infórmenos de cambios.
+- Los especialistas siguen siendo exclusivamente responsables de mantener un registro profesional válido, licencias y autorización para prestar servicios de salud conforme a la legislación portuguesa aplicable.
+- Mantenga seguro de responsabilidad profesional (provea comprobante cuando se solicite).
+- Brinde atención conforme a la ley, ética, consentimiento informado y estándares clínicos; registre y proteja la privacidad.
 
 ## 3) Roles de datos (RGPD/LGPD)
 
@@ -40,7 +45,7 @@ Bienvenido/a a Eleva.care. Este acuerdo explica, en lenguaje claro, cómo colabo
 - Pagos vía Stripe Connect; mensajería con pacientes y notificaciones
 - Soporte técnico y asistencia RGPD cuando corresponda
 
-No brindamos asesoramiento médico ni supervisión, no verificamos credenciales (autodeclaración), no ofrecemos seguro de mala praxis, derivaciones ni servicios de facturación/codificación.
+No brindamos asesoramiento médico ni supervisión, no ofrecemos seguro de mala praxis, derivaciones ni servicios de facturación/codificación. Los especialistas autodeclaran sus credenciales y estatus profesional; Eleva.care puede solicitar documentación y realizar verificaciones razonables cuando sea necesario para la integridad de la plataforma, el cumplimiento normativo o la gestión de riesgos.
 
 ## 5) Precios, comisiones y pagos
 
@@ -69,9 +74,9 @@ No brindamos asesoramiento médico ni supervisión, no verificamos credenciales 
 
 ## 9) Responsabilidad
 
-- Usted es responsable exclusivo de la atención brindada y de mantener el seguro requerido
-- Eleva.care se limita a operar la plataforma tecnológica y medidas razonables de seguridad
-- Usted indemniza a Eleva.care por reclamaciones derivadas de su práctica, incumplimientos regulatorios o de este acuerdo
+- Usted es exclusivamente responsable de la atención clínica que brinda, las decisiones clínicas, los resultados de los pacientes y de mantener el seguro requerido.
+- Eleva.care es responsable de la operación, seguridad y cumplimiento normativo de la plataforma digital de salud. Eleva.care asume responsabilidad organizativa, técnica y administrativa por la plataforma de conformidad con la legislación portuguesa y de la Unión Europea aplicable, mientras los Especialistas siguen siendo exclusivamente responsables de las decisiones clínicas y los resultados.
+- Usted indemniza a Eleva.care por reclamaciones derivadas de su práctica clínica, incumplimientos regulatorios o de este acuerdo.
 
 ## 10) PI, confidencialidad y comunicaciones
 
@@ -84,6 +89,10 @@ No brindamos asesoramiento médico ni supervisión, no verificamos credenciales 
 
 - Podemos actualizar el acuerdo; daremos aviso y pediremos aceptación para cambios materiales
 - Ley aplicable: Portugal. Disputas: negociación de buena fe → mediación → tribunales de Portugal
+
+---
+
+En caso de divergencia entre versiones lingüísticas, prevalecerá la versión en portugués.
 
 ---
 
