--- a/src/content/expert-agreement/pt-BR.mdx
+++ b/src/content/expert-agreement/pt-BR.mdx
@@ -14,17 +14,20 @@ _Data de vigência: 16 de abril de 2025_
 
 Bem‑vindo(a) à Eleva.care. Este acordo explica, em linguagem simples, como trabalhamos quando você presta serviços na plataforma.
 
+A Eleva.care opera uma plataforma digital de saúde que permite a prestação de serviços de saúde remotos por profissionais independentes e licenciados, funcionando no âmbito das atividades de saúde digital e telemedicina definidas na legislação portuguesa aplicável, sem prestar ela própria cuidados clínicos.
+
 ## 1) Seu status (profissional independente)
 
-- Você é profissional de saúde independente e licenciado—não é nosso(a) empregado(a), parceiro(a) ou agente
-- Você gere sua prática: agenda, preços, políticas, impostos, seguros e conformidade regulatória
-- Não supervisionamos suas decisões clínicas nem prestamos serviços médicos
+- Você é profissional de saúde independente e licenciado—não é nosso(a) empregado(a), parceiro(a) ou agente.
+- Você gere sua prática profissional e permanece responsável por suas decisões clínicas, licenciamento, seguros, impostos e conformidade com obrigações clínicas e éticas. A Eleva.care é responsável pela conformidade organizacional, técnica e administrativa da plataforma digital de saúde que opera.
+- A Eleva.care não interfere nem influencia o julgamento clínico, diagnóstico ou decisões de tratamento dos especialistas.
 
 ## 2) Requisitos profissionais
 
-- Mantenha sua(s) licença(s) válida(s) e em boa situação; informe alterações
-- Mantenha seguro de responsabilidade profissional (apresente comprovante quando solicitado)
-- Preste cuidados conforme a lei, ética, consentimento informado e padrões clínicos; registre e proteja a privacidade
+- Mantenha sua(s) licença(s) válida(s) e em boa situação; informe alterações.
+- Os especialistas permanecem exclusivamente responsáveis por manter registro profissional válido, licenciamento e autorização para prestar serviços de saúde conforme a legislação portuguesa aplicável.
+- Mantenha seguro de responsabilidade profissional (apresente comprovante quando solicitado).
+- Preste cuidados conforme a lei, ética, consentimento informado e padrões clínicos; registre e proteja a privacidade.
 
 ## 3) Papéis de dados (GDPR/LGPD)
 
@@ -40,7 +43,7 @@ Bem‑vindo(a) à Eleva.care. Este acordo explica, em linguagem simples, como tr
 - Pagamentos via Stripe Connect; mensagens a pacientes e notificações
 - Suporte técnico e assistência GDPR quando aplicável
 
-Não fornecemos aconselhamento médico ou supervisão, não verificamos credenciais (auto‑declaração), não oferecemos seguro de responsabilidade, indicações nem serviços de faturamento/codificação.
+Não fornecemos aconselhamento médico ou supervisão, não oferecemos seguro de responsabilidade, indicações nem serviços de faturamento/codificação. Os especialistas autodeclaram suas credenciais e status profissional; a Eleva.care pode solicitar documentação e realizar verificações razoáveis quando necessário para integridade da plataforma, conformidade regulatória ou gestão de risco.
 
 ## 5) Preços, taxas e repasses
 
@@ -69,9 +72,9 @@ Não fornecemos aconselhamento médico ou supervisão, não verificamos credenci
 
 ## 9) Responsabilidade
 
-- Você é o único responsável pelo cuidado prestado e por manter o seguro exigido
-- A Eleva.care limita‑se a operar a plataforma tecnológica e medidas razoáveis de segurança
-- Você indeniza a Eleva.care por reclamações decorrentes da sua prática, violações regulatórias ou deste acordo
+- Você é exclusivamente responsável pelos cuidados clínicos que presta, decisões clínicas, resultados dos pacientes e por manter o seguro exigido.
+- A Eleva.care é responsável pela operação, segurança e conformidade regulatória da plataforma digital de saúde. A Eleva.care assume responsabilidade organizacional, técnica e administrativa pela plataforma em conformidade com a legislação portuguesa e da União Europeia aplicável, enquanto os Especialistas permanecem exclusivamente responsáveis pelas decisões clínicas e resultados.
+- Você indeniza a Eleva.care por reclamações decorrentes da sua prática clínica, violações regulatórias ou deste acordo.
 
 ## 10) PI, confidencialidade e avisos
 
@@ -84,6 +87,10 @@ Não fornecemos aconselhamento médico ou supervisão, não verificamos credenci
 
 - Podemos atualizar este acordo; notificaremos e pediremos aceite para mudanças materiais
 - Lei aplicável: Portugal. Disputas: negociação de boa‑fé → mediação → tribunais de Portugal
+
+---
+
+Em caso de divergência entre versões linguísticas, prevalece a versão em português de Portugal.
 
 ---
 
