--- a/src/content/payment-policies/en.mdx
+++ b/src/content/payment-policies/en.mdx
@@ -116,4 +116,6 @@ If something went wrong (system error or edge case), contact support within 48 h
 
 ---
 
+In case of divergence between language versions, the Portuguese version shall prevail.
+
 If you have questions about payments, contact `support@eleva.care`.
