--- a/src/content/payment-policies/es.mdx
+++ b/src/content/payment-policies/es.mdx
@@ -16,7 +16,7 @@ Aquí explicamos cómo funcionan los pagos en Eleva.care en lenguaje claro.
 
 ## 1) Qué está pagando
 
-- Eleva.care es un plataforma confiable. Los pagos van a profesionales independientes y licenciados por sus servicios.
+- Eleva.care es una plataforma digital de salud. Los pagos son para servicios de salud prestados por especialistas independientes y licenciados a través de la plataforma Eleva.care.
 - El precio mostrado incluye todo (sin cargos ocultos):
   - El especialista recibe el 85% del precio de la cita
   - Eleva.care retiene el 15% como tarifa de plataforma (tecnología, infraestructura, soporte, marketing, tarifas Stripe)
@@ -115,5 +115,7 @@ Si hubo un error del sistema o caso especial, contacte con soporte dentro de 48 
 - Cumplimos con la protección al consumidor PT, PSD2 UE, RGPD y términos de Stripe
 
 ---
+
+En caso de divergencia entre versiones lingüísticas, prevalecerá la versión en portugués.
 
 Si tiene dudas sobre pagos, escriba a `support@eleva.care`.
