--- a/src/content/payment-policies/pt.mdx
+++ b/src/content/payment-policies/pt.mdx
@@ -16,7 +16,7 @@ Aqui explicamos como funcionam os pagamentos na Eleva.care de forma simples.
 
 ## 1) O que está a pagar
 
-- A Eleva.care é um plataforma confiável. Os pagamentos vão para profissionais independentes e licenciados pelos seus serviços.
+- A Eleva.care é uma plataforma digital de saúde. Os pagamentos são para serviços de saúde prestados por especialistas independentes e licenciados através da plataforma Eleva.care.
 - O preço apresentado inclui tudo (sem custos ocultos):
   - O especialista recebe 85% do preço da consulta
   - A Eleva.care retém 15% como taxa de plataforma (tecnologia, infraestrutura, suporte, marketing, taxas Stripe)
@@ -115,5 +115,7 @@ Se houve erro do sistema ou caso excecional, contacte o suporte em 48 h com a re
 - Cumprimos proteção do consumidor PT, PSD2 UE, RGPD e termos da Stripe
 
 ---
+
+Em caso de divergência entre versões linguísticas, prevalece a versão em português.
 
 Dúvidas sobre pagamentos? `support@eleva.care`.
