--- a/src/content/privacy/en.mdx
+++ b/src/content/privacy/en.mdx
@@ -99,6 +99,8 @@ We’ll update this policy as needed and note the effective date. If changes are
 
 ---
 
+In case of divergence between language versions, the Portuguese version shall prevail.
+
 **Data Controller:** BÚZIOS E TARTARUGAS - LDA (Eleva.care), NIPC/VAT 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Email `support@eleva.care`, Phone `+351 931 897 950`.
 
 DPO: `dpo@eleva.care`.
