--- a/src/content/privacy/es.mdx
+++ b/src/content/privacy/es.mdx
@@ -16,7 +16,7 @@ Respetamos su privacidad y lo explicamos de forma simple. Qué recopilamos, por 
 
 ## 1) Quiénes somos y nuestro rol
 
-- Eleva.care es un plataforma confiable en salud. Conectamos clientes con profesionales independientes. No somos un proveedor de salud.
+- Eleva.care es una plataforma digital de salud que permite la prestación de servicios de salud remotos por especialistas independientes y licenciados. Eleva.care no presta atención clínica; los servicios de salud son prestados por especialistas independientes a través de la plataforma.
 - Actuamos como:
   - Responsable del tratamiento para operaciones de plataforma (cuentas, reservas, pagos, soporte, analítica)
   - Encargado del tratamiento para notas/archivos clínicos creados por profesionales (ellos son Responsables; nosotros almacenamos de forma segura)
@@ -98,6 +98,8 @@ Exigimos proceso legal válido, limitamos el alcance a lo necesario, impugnamos 
 Actualizaremos esta política según sea necesario y marcaremos la fecha de vigencia. Avisaremos cambios materiales.
 
 ---
+
+En caso de divergencia entre versiones lingüísticas, prevalecerá la versión en portugués.
 
 **Responsable del tratamiento:** BÚZIOS E TARTARUGAS - LDA (Eleva.care), NIPC/NIF 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Email `support@eleva.care`, Tel. `+351 931 897 950`.
 
