--- a/src/content/privacy/pt-BR.mdx
+++ b/src/content/privacy/pt-BR.mdx
@@ -16,7 +16,7 @@ Respeitamos sua privacidade. Explicamos de forma simples o que coletamos, por qu
 
 ## 1) Quem somos e nosso papel
 
-- A Eleva.care é um plataforma confiável em saúde. Conectamos clientes a profissionais independentes. Não somos provedor de saúde.
+- A Eleva.care é uma plataforma digital de saúde que permite a prestação de serviços de saúde remotos por especialistas independentes e licenciados. A Eleva.care não presta cuidados clínicos; os serviços de saúde são prestados por especialistas independentes através da plataforma.
 - Atuamos como:
   - Controlador para operações da plataforma (contas, agendamentos, pagamentos, suporte, analytics)
   - Operador para notas/arquivos clínicos criados por profissionais (eles são Controladores; nós armazenamos com segurança)
@@ -98,6 +98,8 @@ Exigimos processo legal válido, limitamos o escopo ao necessário, contestamos 
 Atualizaremos esta política quando necessário e indicaremos a data de vigência. Avisaremos alterações materiais.
 
 ---
+
+Em caso de divergência entre versões linguísticas, prevalece a versão em português de Portugal.
 
 **Controlador de dados:** BÚZIOS E TARTARUGAS - LDA (Eleva.care), NIPC/NIF 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. E‑mail `support@eleva.care`, Telefone `+351 931 897 950`.
 
