--- a/src/content/privacy/pt.mdx
+++ b/src/content/privacy/pt.mdx
@@ -16,7 +16,7 @@ Respeitamos a sua privacidade. Explicamos de forma simples o que recolhemos, por
 
 ## 1) Quem somos e o nosso papel
 
-- A Eleva.care é um plataforma confiável em saúde. Ligamos clientes a profissionais independentes. Não somos prestador de saúde.
+- A Eleva.care é uma plataforma digital de saúde que permite a prestação de serviços de saúde remotos por especialistas independentes e licenciados. A Eleva.care não presta cuidados clínicos; os serviços de saúde são prestados por especialistas independentes através da plataforma.
 - Atuamos como:
   - Responsável pelo tratamento para operações da plataforma (contas, marcações, pagamentos, suporte, analítica)
   - Subcontratante para notas/ficheiros clínicos criados por profissionais (eles são Responsáveis; nós armazenamos em segurança)
@@ -98,6 +98,8 @@ Exigimos processo legal válido, limitamos o âmbito ao necessário, contestamos
 Atualizaremos esta política quando necessário e indicaremos a data de vigência. Avisaremos alterações materiais.
 
 ---
+
+Em caso de divergência entre versões linguísticas, prevalece a versão em português.
 
 **Responsável pelo tratamento:** BÚZIOS E TARTARUGAS - LDA (Eleva.care), NIPC/NIF 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Email `support@eleva.care`, Telefone `+351 931 897 950`.
 
