--- a/src/content/terms/en.mdx
+++ b/src/content/terms/en.mdx
@@ -122,6 +122,10 @@ We may update these Terms. We’ll notify you of material changes; continuing to
 
 ---
 
+In case of divergence between language versions, the Portuguese version shall prevail.
+
+---
+
 ## Legal information
 
 Issued by:
