--- a/src/content/terms/es.mdx
+++ b/src/content/terms/es.mdx
@@ -14,18 +14,26 @@ _Fecha de vigencia:_ 16 de abril de 2025
 
 Bienvenido a **Eleva.care** (operado por **Búzios e Tartarugas, Lda.**). Al usar Eleva.care, acepta estos Términos. Léelos con atención.
 
+## Definiciones
+
+- **Plataforma** designa la plataforma digital de salud Eleva.care, incluyendo sitios web, aplicaciones e infraestructura relacionada, operada por Eleva.care.
+- **Especialista** designa a un profesional de salud independiente y debidamente licenciado que ofrece servicios de salud remotos a través de la Plataforma.
+- **Teleconsulta** designa la prestación remota de servicios de salud por un Especialista a un cliente a través de la plataforma Eleva.care, utilizando herramientas de comunicación digital.
+- **Atención Clínica** designa el diagnóstico, tratamiento u otros servicios de salud prestados por un Especialista a un cliente.
+
 ## 1) Qué es Eleva.care (y qué no es)
 
-- Eleva.care es un plataforma confiable que conecta a personas que buscan atención con especialistas independientes y licenciados.
-- Eleva.care no es una clínica ni un proveedor de salud. No empleamos, supervisamos ni controlamos a los especialistas, y no ofrecemos asesoramiento, diagnóstico ni tratamiento médico.
-- Los especialistas en Eleva Care son independientes, licenciados en sus jurisdicciones, cuentan con su propio seguro de responsabilidad profesional y son los únicos responsables de la atención que brindan.
+- Eleva.care es una plataforma digital de salud que permite la prestación de servicios de salud remotos (teleconsultas / telemedicina) por profesionales independientes y licenciados.
+- Eleva.care no presta atención clínica ni tratamiento médico. No empleamos especialistas y no interferimos ni supervisamos su juicio clínico.
+- Los especialistas en Eleva.care son independientes, licenciados en sus jurisdicciones, cuentan con su propio seguro de responsabilidad profesional y son los únicos responsables de las decisiones clínicas y los resultados de los pacientes.
+- Eleva.care asume responsabilidad organizativa, técnica y administrativa por la operación de la plataforma digital de salud, de conformidad con la legislación portuguesa y de la Unión Europea aplicable.
 
 ## 2) Lo que ofrecemos
 
 - Cuentas, verificación de identidad y soporte
 - Para clientes: búsqueda y descubrimiento, reservas y agenda, pagos (vía Stripe), mensajería segura e historial de citas
 - Para especialistas: perfil, agenda, notas cifradas (usted controla el contenido), pagos y cobros (Stripe Connect), mensajería segura y archivos cifrados
-- No prestamos servicios médicos ni verificamos credenciales más allá de la autocertificación del especialista
+- Eleva.care no presta servicios médicos. Los especialistas autodeclaran sus credenciales y estatus profesional; Eleva.care puede solicitar documentación y realizar verificaciones razonables cuando sea necesario para la integridad de la plataforma, el cumplimiento normativo o la gestión de riesgos.
 
 Nuestras funciones pueden cambiar con el tiempo.
 
@@ -50,8 +58,8 @@ Podemos suspender o terminar el acceso si se incumplen estas reglas.
 ## 5) Clientes
 
 - Usted elige a su especialista y debe verificar sus credenciales y licencias
-- Su relación de atención es con el especialista, no con Eleva.care
-- Eleva.care no es responsable de la atención médica que reciba
+- La relación de atención sanitaria se establece directamente entre usted y el Especialista seleccionado. Eleva.care facilita la programación, el pago y el acceso técnico a la consulta remota, pero no establece por sí misma una relación proveedor de salud–paciente con usted.
+- Eleva.care no es responsable de las decisiones clínicas ni de los resultados médicos derivados de la atención prestada por los especialistas.
 
 ## 6) Especialistas
 
@@ -83,8 +91,9 @@ La plataforma Eleva.care (texto, gráficos, logotipos y software) pertenece a El
 
 En la máxima medida permitida por la ley:
 
-- Prestamos servicios tecnológicos “tal cual” y somos responsables solo del funcionamiento de la plataforma
-- No somos responsables de la atención médica, asesoramiento, diagnóstico, tratamiento, resultados ni disputas entre usted y el especialista
+- Eleva.care es responsable de la operación, seguridad y cumplimiento normativo de la plataforma digital de salud. Eleva.care asume responsabilidad organizativa, técnica y administrativa por la plataforma de conformidad con la legislación portuguesa y de la Unión Europea aplicable.
+- Eleva.care no es responsable de las decisiones clínicas, resultados médicos ni disputas entre usted y un especialista derivadas de la atención clínica prestada.
+- Eleva.care mantiene procedimientos internos para la seguridad de la plataforma, respuesta a incidentes y gestión de riesgos relacionados con la operación de la plataforma digital de salud.
 
 ### Emergencias
 
@@ -110,6 +119,10 @@ Podemos actualizar estos Términos. Avisaremos cambios materiales; seguir usando
 
 - Sus derechos legales no se ven afectados. Puede usar la plataforma ODR de la Comisión Europea: https://ec.europa.eu/consumers/odr
 - Derecho de desistimiento: cuando sea aplicable a ciertos servicios no sanitarios de la plataforma, puede desistir en 14 días salvo que solicite ejecución inmediata. Para servicios sanitarios en fecha/hora específica prestados por especialistas independientes, puede no aplicar una vez iniciado el servicio o para servicios con fecha/hora concreta, según la ley.
+
+---
+
+En caso de divergencia entre versiones lingüísticas, prevalecerá la versión en portugués.
 
 ---
 
