--- a/src/content/trust/dpa/en.mdx
+++ b/src/content/trust/dpa/en.mdx
@@ -95,4 +95,6 @@ We rely on carefully vetted subprocessors to operate the platform. Each subproce
 
 Change notifications: we will update this list and provide notice at least 30 days before adding or replacing a subprocessor (except where immediate change is required for security, compliance, or continuity). Controllers may object on reasonable, documented grounds. We will work in good faith to mitigate or, if unresolved, allow service termination for the affected processing without penalty.
 
+In case of divergence between language versions, the Portuguese version shall prevail.
+
 Contact (DPO): `dpo@eleva.care` · Operator: BÚZIOS E TARTARUGAS – LDA (Eleva.care), NIPC/VAT 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Support `support@eleva.care`.
