--- a/src/content/trust/dpa/es.mdx
+++ b/src/content/trust/dpa/es.mdx
@@ -14,9 +14,11 @@ _Fecha de vigencia: 16 de abril de 2025_
 
 Este DPA explica cómo Eleva.care trata los datos personales—de forma clara y simple.
 
+Eleva.care es una plataforma digital de salud que permite la prestación de servicios de salud remotos por profesionales independientes. Eleva.care no presta atención clínica. El estatus regulatorio de Eleva.care conforme a la legislación portuguesa y de la Unión Europea en materia de salud (por ej., registro como plataforma de telemedicina) es distinto de sus roles de protección de datos conforme al RGPD, y Eleva.care cumplirá con la legislación sanitaria aplicable.
+
 ## 1) Quién hace qué
 
-- Eleva.care es un plataforma tecnológica en salud. No somos proveedor de salud.
+- Eleva.care es una plataforma digital de salud que permite servicios de salud remotos por profesionales independientes y licenciados. Eleva.care no presta atención clínica.
 - Dos roles:
   - Responsable (operaciones de plataforma: cuentas, reservas, pagos, analítica, soporte)
   - Encargado (notas/archivos clínicos creados por profesionales: almacenamos de forma segura bajo sus instrucciones)
@@ -67,8 +69,8 @@ Este DPA explica cómo Eleva.care trata los datos personales—de forma clara y 
 
 ## 10) Responsabilidad
 
-- Eleva.care: responsable por la plataforma y seguridad descritas
-- Especialistas: responsables por decisiones clínicas, resultados y cumplimiento como Responsables
+- Eleva.care: responsable por la operación, seguridad y cumplimiento organizativo/técnico/administrativo de la plataforma digital de salud, según lo descrito.
+- Especialistas: responsables por decisiones clínicas, resultados de pacientes y cumplimiento como Responsables de datos clínicos.
 
 ## 11) Actualizaciones, ley y disputas
 
@@ -92,5 +94,7 @@ Dependemos de subencargados cuidadosamente evaluados para operar la plataforma. 
 | Stripe    | Pagos                          | Metadatos de pagos (no almacenamos PAN)                  | UE/EEE                         | PCI DSS L1, DPA, SCCs                                |
 
 Aviso de cambios: actualizaremos esta lista y daremos aviso con al menos 30 días de antelación antes de añadir o reemplazar un subencargado (salvo cambios inmediatos necesarios por seguridad, cumplimiento o continuidad). Los Responsables pueden oponerse con motivos razonables y documentados. Actuaremos de buena fe para mitigar o, si no se resuelve, permitir la terminación del servicio para el tratamiento afectado sin penalización.
+
+En caso de divergencia entre versiones lingüísticas, prevalecerá la versión en portugués.
 
 Contacto (DPO): `dpo@eleva.care` · Operador: BÚZIOS E TARTARUGAS – LDA (Eleva.care), NIPC/NIF 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Soporte `support@eleva.care`.
