--- a/src/content/trust/dpa/pt-BR.mdx
+++ b/src/content/trust/dpa/pt-BR.mdx
@@ -14,9 +14,11 @@ _Data de vigência: 16 de abril de 2025_
 
 Este DPA explica como a Eleva.care trata dados pessoais—de forma clara e simples.
 
+A Eleva.care é uma plataforma digital de saúde que permite a prestação de serviços de saúde remotos por profissionais independentes. A Eleva.care não presta cuidados clínicos. O status regulatório da Eleva.care conforme a legislação portuguesa e da União Europeia em matéria de saúde (por ex., registro como plataforma de telemedicina) é distinto de seus papéis de proteção de dados conforme o GDPR, e a Eleva.care cumprirá a legislação de saúde aplicável.
+
 ## 1) Quem faz o quê
 
-- A Eleva.care é um plataforma tecnológica em saúde. Não somos provedor de saúde.
+- A Eleva.care é uma plataforma digital de saúde que permite serviços de saúde remotos por profissionais independentes e licenciados. A Eleva.care não presta cuidados clínicos.
 - Dois papéis:
   - Controlador (operações da plataforma: contas, agendamentos, pagamentos, analytics, suporte)
   - Operador (notas/arquivos clínicos criados por profissionais: armazenamos com segurança conforme instruções)
@@ -67,8 +69,8 @@ Este DPA explica como a Eleva.care trata dados pessoais—de forma clara e simpl
 
 ## 10) Responsabilidade
 
-- Eleva.care: responsável pela tecnologia e segurança descritas
-- Especialistas: responsáveis por decisões clínicas, resultados e conformidade como Controladores
+- Eleva.care: responsável pela operação, segurança e conformidade organizacional/técnica/administrativa da plataforma digital de saúde, conforme descrito.
+- Especialistas: responsáveis por decisões clínicas, resultados dos pacientes e conformidade como Controladores de dados clínicos.
 
 ## 11) Atualizações, lei e disputas
 
@@ -92,5 +94,7 @@ Contamos com subprocessadores cuidadosamente avaliados para operar a plataforma.
 | Stripe     | Pagamentos                   | Metadados de pagamentos (não armazenamos PAN)                   | UE/EEE                        | PCI DSS L1, DPA, SCCs                                         |
 
 Aviso de mudanças: atualizaremos esta lista e notificaremos com pelo menos 30 dias de antecedência antes de adicionar ou substituir subprocessadores (exceto mudanças imediatas necessárias por segurança, conformidade ou continuidade). Controladores podem se opor com fundamentos razoáveis e documentados. Atuaremos de boa‑fé para mitigar ou, se não resolvido, permitir a rescisão do serviço para o tratamento afetado sem penalidades.
+
+Em caso de divergência entre versões linguísticas, prevalece a versão em português de Portugal.
 
 Contato (DPO): `dpo@eleva.care` · Operadora: BÚZIOS E TARTARUGAS – LDA (Eleva.care), NIPC/NIF 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Suporte `support@eleva.care`.
