--- a/src/content/trust/security/en.mdx
+++ b/src/content/trust/security/en.mdx
@@ -106,6 +106,8 @@ Notes:
 
 ---
 
+In case of divergence between language versions, the Portuguese version shall prevail.
+
 **Data Controller:** BÚZIOS E TARTARUGAS - LDA (Eleva.care), NIPC/VAT 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Email `support@eleva.care`, Phone `+351 931 897 950`.
 
 We continuously improve our security program and update this page as things evolve.
