--- a/src/content/trust/security/es.mdx
+++ b/src/content/trust/security/es.mdx
@@ -12,7 +12,7 @@ export const metadata = {
 
 _Última actualización: 1 de octubre de 2025_
 
-Tomamos la seguridad en serio. A continuación, un resumen claro y directo de cómo protegemos sus datos y operamos una plataforma segura.
+Tomamos la seguridad en serio. A continuación, un resumen claro y directo de cómo protegemos sus datos y operamos una plataforma digital de salud segura.
 
 ## 1) Cumplimiento como base
 
@@ -73,6 +73,7 @@ Notas:
 
 - Monitoreo 24/7, runbooks documentados, notificaciones regulatorias (RGPD 72h, LGPD ANPD)
 - Revisiones post‑incidente y comunicación a usuarios
+- Eleva.care mantiene procedimientos internos para seguridad de la plataforma, respuesta a incidentes y gestión de riesgos relacionados con la operación de la plataforma digital de salud
 
 ## 6) Personas y terceros
 
@@ -104,6 +105,8 @@ Notas:
 - Soporte: `support@eleva.care`
 
 ---
+
+En caso de divergencia entre versiones lingüísticas, prevalecerá la versión en portugués.
 
 **Responsable del Tratamiento:** BÚZIOS E TARTARUGAS - LDA (Eleva.care), NIPC/NIF 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Email `support@eleva.care`, Tel. `+351 931 897 950`.
 
