--- a/src/content/trust/security/pt-BR.mdx
+++ b/src/content/trust/security/pt-BR.mdx
@@ -12,7 +12,7 @@ export const metadata = {
 
 _Última atualização: 1 de outubro de 2025_
 
-Levamos a segurança a sério. Abaixo está um resumo claro e objetivo de como protegemos seus dados e operamos uma plataforma segura.
+Levamos a segurança a sério. Abaixo está um resumo claro e objetivo de como protegemos seus dados e operamos uma plataforma digital de saúde segura.
 
 ## 1) Conformidade como base
 
@@ -73,6 +73,7 @@ Notas:
 
 - Monitoramento 24/7, runbooks documentados, notificações regulatórias (GDPR 72h, LGPD ANPD)
 - Revisões pós‑incidente e comunicação com usuários
+- A Eleva.care mantém procedimentos internos para segurança da plataforma, resposta a incidentes e gestão de risco relacionados com a operação da plataforma digital de saúde
 
 ## 6) Pessoas e terceiros
 
@@ -104,6 +105,8 @@ Notas:
 - Suporte: `support@eleva.care`
 
 ---
+
+Em caso de divergência entre versões linguísticas, prevalece a versão em português de Portugal.
 
 **Controlador de Dados:** BÚZIOS E TARTARUGAS - LDA (Eleva.care), NIPC/NIF 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. E‑mail `support@eleva.care`, Telefone `+351 931 897 950`.
 
