--- a/src/content/expert-agreement/pt.mdx
+++ b/src/content/expert-agreement/pt.mdx
@@ -14,17 +14,20 @@ _Data de vigência: 16 de abril de 2025_
 
 Bem‑vindo(a) à Eleva.care. Este acordo explica, em linguagem simples, como colaboramos quando presta serviços na plataforma.
 
+A Eleva.care opera uma plataforma digital de saúde que permite a prestação de serviços de saúde remotos por profissionais independentes e licenciados, funcionando no âmbito das atividades de saúde digital e telemedicina definidas na legislação portuguesa aplicável, sem prestar ela própria cuidados clínicos.
+
 ## 1) O seu estatuto (profissional independente)
 
-- É um profissional de saúde independente e licenciado—não é nosso(a) empregado(a), parceiro(a) ou agente
-- Gere a sua prática: agenda, preços, políticas, impostos, seguros e conformidade regulatória
-- Não supervisionamos as suas decisões clínicas nem prestamos serviços médicos
+- É um profissional de saúde independente e licenciado—não é nosso(a) empregado(a), parceiro(a) ou agente.
+- Gere a sua prática profissional e permanece responsável pelas suas decisões clínicas, licenciamento, seguros, impostos e conformidade com obrigações clínicas e éticas. A Eleva.care é responsável pela conformidade organizacional, técnica e administrativa da plataforma digital de saúde que opera.
+- A Eleva.care não interfere nem influencia o julgamento clínico, diagnóstico ou decisões de tratamento dos especialistas.
 
 ## 2) Requisitos profissionais
 
-- Mantenha a(s) licença(s) válida(s) e em boa situação; informe alterações
-- Mantenha seguro de responsabilidade profissional (apresente comprovativo quando solicitado)
-- Preste cuidados conforme a lei, ética, consentimento informado e padrões clínicos; registe e proteja a privacidade
+- Mantenha a(s) licença(s) válida(s) e em boa situação; informe alterações.
+- Os especialistas permanecem exclusivamente responsáveis por manter registo profissional válido, licenciamento e autorização para prestar serviços de saúde ao abrigo da legislação portuguesa aplicável.
+- Mantenha seguro de responsabilidade profissional (apresente comprovativo quando solicitado).
+- Preste cuidados conforme a lei, ética, consentimento informado e padrões clínicos; registe e proteja a privacidade.
 
 ## 3) Papéis de dados (RGPD/LGPD)
 
@@ -40,7 +43,7 @@ Bem‑vindo(a) à Eleva.care. Este acordo explica, em linguagem simples, como co
 - Pagamentos via Stripe Connect; mensagens a pacientes e notificações
 - Suporte técnico e assistência RGPD quando aplicável
 
-Não fornecemos conselho médico nem supervisão, não verificamos credenciais (auto‑declaração), não oferecemos seguro de responsabilidade, referenciações nem serviços de faturação/codificação.
+Não fornecemos conselho médico nem supervisão, não oferecemos seguro de responsabilidade, referenciações nem serviços de faturação/codificação. Os especialistas auto‑declaram as suas credenciais e estatuto profissional; a Eleva.care pode solicitar documentação e efetuar verificações razoáveis quando necessário para integridade da plataforma, conformidade regulamentar ou gestão de risco.
 
 ## 5) Preços, comissões e pagamentos
 
@@ -69,9 +72,9 @@ Não fornecemos conselho médico nem supervisão, não verificamos credenciais (
 
 ## 9) Responsabilidade
 
-- É exclusivamente responsável pelos cuidados prestados e por manter o seguro exigido
-- A Eleva.care limita‑se a operar a plataforma tecnológica e medidas razoáveis de segurança
-- Indemniza a Eleva.care por reclamações decorrentes da sua prática, incumprimentos regulatórios ou deste acordo
+- É exclusivamente responsável pelos cuidados clínicos que presta, decisões clínicas, resultados dos pacientes e por manter o seguro exigido.
+- A Eleva.care é responsável pela operação, segurança e conformidade regulamentar da plataforma digital de saúde. A Eleva.care assume responsabilidade organizacional, técnica e administrativa pela plataforma em conformidade com a legislação portuguesa e da União Europeia aplicável, enquanto os Especialistas permanecem exclusivamente responsáveis pelas decisões clínicas e resultados.
+- Indemniza a Eleva.care por reclamações decorrentes da sua prática clínica, incumprimentos regulatórios ou deste acordo.
 
 ## 10) PI, confidencialidade e avisos
 
@@ -84,6 +87,10 @@ Não fornecemos conselho médico nem supervisão, não verificamos credenciais (
 
 - Podemos atualizar este acordo; notificamos e pedimos aceitação para alterações materiais
 - Lei aplicável: Portugal. Litígios: negociação de boa‑fé → mediação → tribunais de Portugal
+
+---
+
+Em caso de divergência entre versões linguísticas, prevalece a versão em português.
 
 ---
 
