--- a/src/content/terms/pt-BR.mdx
+++ b/src/content/terms/pt-BR.mdx
@@ -14,18 +14,26 @@ _Data de vigência:_ 16 de abril de 2025
 
 Bem‑vindo à **Eleva.care** (operada por **Búzios e Tartarugas, Lda.**). Ao usar a Eleva.care, você concorda com estes Termos. Leia com atenção.
 
+## Definições
+
+- **Plataforma** designa a plataforma digital de saúde Eleva.care, incluindo websites, aplicativos e infraestrutura relacionada, operada pela Eleva.care.
+- **Especialista** designa um profissional de saúde independente e devidamente licenciado que oferece serviços de saúde remotos por meio da Plataforma.
+- **Teleconsulta** designa a prestação remota de serviços de saúde por um Especialista a um cliente por meio da plataforma Eleva.care, utilizando ferramentas de comunicação digital.
+- **Cuidados Clínicos** designa o diagnóstico, tratamento ou outros serviços de saúde prestados por um Especialista a um cliente.
+
 ## 1) O que é a Eleva.care (e o que não é)
 
-- Marketplace tecnológico que conecta pessoas a especialistas independentes e licenciados.
-- Não somos clínica nem prestador de saúde. Não empregamos, supervisionamos ou controlamos profissionais e não oferecemos aconselhamento, diagnóstico ou tratamento médico.
-- Profissionais são independentes, licenciados em suas jurisdições, mantêm seguro de responsabilidade profissional e são os únicos responsáveis pelos cuidados que prestam.
+- A Eleva.care é uma plataforma digital de saúde que permite a prestação de serviços de saúde remotos (teleconsultas / telemedicina) por profissionais independentes e licenciados.
+- A Eleva.care não presta cuidados clínicos nem tratamento médico. Não empregamos especialistas e não interferimos nem supervisionamos seu julgamento clínico.
+- Os especialistas na Eleva.care são independentes, licenciados em suas jurisdições, mantêm seu próprio seguro de responsabilidade profissional e são os únicos responsáveis pelas decisões clínicas e resultados dos pacientes.
+- A Eleva.care assume responsabilidade organizacional, técnica e administrativa pela operação da plataforma digital de saúde, em conformidade com a legislação portuguesa e da União Europeia aplicável.
 
 ## 2) O que oferecemos
 
 - Contas, verificação de identidade e suporte
 - Para clientes: busca e descoberta, agendamentos e reservas, pagamentos (Stripe), mensagens seguras e histórico
 - Para especialistas: perfil, agenda, notas criptografadas (você controla o conteúdo), pagamentos e repasses (Stripe Connect), mensagens seguras e arquivos criptografados
-- Não prestamos serviços médicos nem verificamos credenciais além da auto‑certificação do profissional
+- A Eleva.care não presta serviços médicos. Os especialistas autodeclaram suas credenciais e status profissional; a Eleva.care pode solicitar documentação e realizar verificações razoáveis quando necessário para integridade da plataforma, conformidade regulatória ou gestão de risco.
 
 As funcionalidades podem mudar ao longo do tempo.
 
@@ -49,9 +57,9 @@ Podemos suspender ou encerrar o acesso em caso de violação.
 
 ## 5) Clientes
 
-- Você escolhe seu profissional e deve verificar credenciais e licenças
-- A relação de cuidados é com o especialista, não com a Eleva.care
-- A Eleva.care não é responsável pelos cuidados que você recebe
+- Você escolhe seu especialista e deve verificar credenciais e licenças
+- A relação de saúde é estabelecida diretamente entre você e o Especialista selecionado. A Eleva.care facilita o agendamento, pagamento e acesso técnico à consulta remota, mas não estabelece ela própria uma relação prestador de saúde–paciente com você.
+- A Eleva.care não é responsável pelas decisões clínicas ou resultados médicos decorrentes dos cuidados prestados pelos especialistas.
 
 ## 6) Especialistas
 
@@ -83,8 +91,9 @@ A plataforma Eleva.care (texto, gráficos, logotipos e software) pertence à Ele
 
 Na máxima medida permitida por lei:
 
-- prestamos serviços tecnológicos “no estado em que se encontram” e somos responsáveis apenas pela operação da plataforma
-- não somos responsáveis por cuidados médicos, aconselhamento, diagnóstico, tratamento, resultados ou disputas entre você e o especialista
+- A Eleva.care é responsável pela operação, segurança e conformidade regulatória da plataforma digital de saúde. A Eleva.care assume responsabilidade organizacional, técnica e administrativa pela plataforma em conformidade com a legislação portuguesa e da União Europeia aplicável.
+- A Eleva.care não é responsável pelas decisões clínicas, resultados médicos ou disputas entre você e um especialista decorrentes dos cuidados clínicos prestados.
+- A Eleva.care mantém procedimentos internos para segurança da plataforma, resposta a incidentes e gestão de risco relacionados com a operação da plataforma digital de saúde.
 
 ### Emergências
 
@@ -110,6 +119,10 @@ Podemos atualizar estes Termos. Avisaremos alterações materiais; continuar a u
 
 - Seus direitos legais não são afetados. Plataforma ODR da Comissão Europeia: https://ec.europa.eu/consumers/odr
 - Direito de arrependimento: quando aplicável a certos serviços não relacionados à saúde, você pode desistir em 14 dias, salvo pedido de execução imediata. Para serviços de saúde em data/hora específica prestados por profissionais independentes, a desistência pode não se aplicar após o início do serviço ou para serviços com data/hora marcada, conforme a lei.
+
+---
+
+Em caso de divergência entre versões linguísticas, prevalece a versão em português de Portugal.
 
 ---
 
