--- a/src/content/trust/dpa/pt.mdx
+++ b/src/content/trust/dpa/pt.mdx
@@ -1,11 +1,13 @@
 export const metadata = {
-  "title": "Acordo de Processamento de Dados | Eleva Care",
-  "description": "Reveja o acordo de processamento de dados da Eleva Care que descreve como tratamos e protegemos os seus dados de saúde.",
-  "og": {
-    "title": "Acordo de Processamento de Dados | Eleva Care",
-    "description": "Reveja o acordo de processamento de dados da Eleva Care que descreve como tratamos e protegemos os seus dados de saúde.",
-    "siteName": "Eleva Care"
-  }
+  title: 'Acordo de Processamento de Dados | Eleva Care',
+  description:
+    'Reveja o acordo de processamento de dados da Eleva Care que descreve como tratamos e protegemos os seus dados de saúde.',
+  og: {
+    title: 'Acordo de Processamento de Dados | Eleva Care',
+    description:
+      'Reveja o acordo de processamento de dados da Eleva Care que descreve como tratamos e protegemos os seus dados de saúde.',
+    siteName: 'Eleva Care',
+  },
 };
 
 # Acordo de Tratamento de Dados (DPA)
@@ -14,9 +16,11 @@ _Data de vigência: 16 de abril de 2025_
 
 Este DPA explica como a Eleva.care trata dados pessoais—de forma clara e simples.
 
+A Eleva.care é uma plataforma digital de saúde que permite a prestação de serviços de saúde remotos por profissionais independentes. A Eleva.care não presta cuidados clínicos. O estatuto regulamentar da Eleva.care ao abrigo da legislação portuguesa e da União Europeia em matéria de saúde (por ex., registo como plataforma de telemedicina) é distinto dos seus papéis de proteção de dados ao abrigo do RGPD, e a Eleva.care cumprirá a legislação de saúde aplicável.
+
 ## 1) Quem faz o quê
 
-- A Eleva.care é um plataforma tecnológica em saúde. Não somos prestador de saúde.
+- A Eleva.care é uma plataforma digital de saúde que permite serviços de saúde remotos por profissionais independentes e licenciados. A Eleva.care não presta cuidados clínicos.
 - Dois papéis:
   - Responsável (operações de plataforma: contas, marcações, pagamentos, analítica, suporte)
   - Subcontratante (notas/ficheiros clínicos criados por profissionais: armazenamos em segurança sob instruções)
@@ -67,8 +71,8 @@ Este DPA explica como a Eleva.care trata dados pessoais—de forma clara e simpl
 
 ## 10) Responsabilidade
 
-- Eleva.care: responsável pela tecnologia e segurança descritas
-- Especialistas: responsáveis por decisões clínicas, resultados e conformidade enquanto Responsáveis
+- Eleva.care: responsável pela operação, segurança e conformidade organizacional/técnica/administrativa da plataforma digital de saúde, conforme descrito.
+- Especialistas: responsáveis por decisões clínicas, resultados dos pacientes e conformidade enquanto Responsáveis pelos dados clínicos.
 
 ## 11) Atualizações, lei e litígios
 
@@ -92,5 +96,7 @@ Recorremos a subprocessadores cuidadosamente avaliados para operar a plataforma.
 | Stripe     | Pagamentos                   | Metadados de pagamentos (não guardamos PAN)               | UE/EEE                        | PCI DSS L1, DPA, SCCs                                  |
 
 Aviso de alterações: atualizaremos esta lista e daremos aviso com pelo menos 30 dias de antecedência antes de adicionar/substituir subprocessadores (salvo alterações imediatas por segurança, conformidade ou continuidade). Os Responsáveis podem opor‑se com fundamentos razoáveis e documentados. Agiremos de boa‑fé para mitigar ou, se irresolúvel, permitir a cessação do serviço para o tratamento afetado sem penalização.
+
+Em caso de divergência entre versões linguísticas, prevalece a versão em português.
 
 Contacto (DPO): `dpo@eleva.care` · Operador: BÚZIOS E TARTARUGAS – LDA (Eleva.care), NIPC/NIF 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Suporte `support@eleva.care`.
